--- a/google.css
+++ b/google.css
@@ -1,5 +1,3 @@
-/* FAKE GOOGLE CSS */
-
 *{
     margin=0;
     padding: 0;
@@ -15,7 +13,7 @@ body{
 }
 h1#logo{
     width: 284px;
-    height: 95px;
+    height: 95px; /* Resim Olarak kullandım CSS */
     background: url("https://upload.wikimedia.org/wikipedia/commons/c/c7/GoogleLogoSept12015.png") top left no-repeat;
     background-size: 100%;
     text-indent: -99999px;
@@ -102,6 +100,3 @@ footer nav ul.left-links{
     clear:both;
     
 }
-
-
-
